<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|right"
    android:background="@color/colorFullTransparent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.percent.PercentFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorFullTransparent"
        android:layout_gravity="start"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:background="@drawable/dialog_back"
        app:layout_widthPercent="50%"
        android:layout_marginRight="15sp"
        android:orientation="vertical"
        android:layout_gravity="right"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Calendar"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@drawable/settings_line_code"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingLeft="10sp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serig-light"
            android:text="@string/calendar"/>
        <Button
            android:id="@+id/EditRemote"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@drawable/settings_line_code"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingLeft="10sp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serig-light"
            android:text="@string/edit_remote"/>
        <Button
            android:id="@+id/History"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@drawable/settings_line_code"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingLeft="10sp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serig-light"
            android:text="@string/history"/>

        <Button
            android:id="@+id/EditName"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@drawable/settings_line_code"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingLeft="10sp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serig-light"
            android:text="@string/edit_device_name"/>

        <Button
            android:id="@+id/Deletedevice"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:background="@color/colorFullTransparent"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:paddingLeft="10sp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serig-light"
            android:text="@string/delete_device"/>

    </LinearLayout>
    </android.support.percent.PercentFrameLayout>
</RelativeLayout>