<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity_add_device"
    android:layout_height="match_parent"
    tools:context="com.example.enver.flinkhomev1.AddDevice">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_bar_back"
        android:id="@+id/toolbar"
      >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/titlemain"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/step4_title"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryWhite"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical|center"
                android:textAlignment="gravity"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/imgRight"
                android:layout_alignEnd="@+id/imgRight" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:layout_marginTop="70sp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:textColor="@color/textColor"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="7sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:textSize="18sp"
            android:text="@string/step4_text" />

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_device"
            android:layout_marginRight="20sp"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="20sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_gravity="start"
                android:ems="10"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:paddingTop="0sp"
                android:paddingBottom="0sp"
                android:textSize="17sp"
                android:textColorHint="@color/textColor"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@color/colorPrimaryDark"
                android:background="@drawable/edit_text_selector_blue"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25sp"
                android:background="@drawable/step3_list"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/addremote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textSize="13sp"
            android:background="@color/colorFullTransparent"
            android:text="@string/step4_checkbox"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_alignParentLeft="true"
            android:buttonTint="@color/colorBlack"
            android:paddingLeft="10sp"
            android:lineSpacingExtra="3sp"
            android:layout_marginTop="10sp"
            android:button="@drawable/checkbox_selector"
            />
    </LinearLayout>

        <ImageView
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/step4"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="75sp"/>

        <Button
            android:id="@+id/add_device"
            android:layout_width="match_parent"
            android:layout_height="55sp"
            android:text="@string/finish"
            android:textAllCaps="true"
            android:onClick="Next"
            android:background="@drawable/step_button_all"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorPrimaryWhite"
            android:textStyle="normal|bold"
            android:textSize="14sp"
            />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
